added dynamic grid

--- a/style.css
+++ b/style.css
@@ -1,22 +1,7 @@
-*{
-    box-sizing: border-box;
+.board{
+    width: 500px;
+    height: 500px;
+    display: grid;
 }
 
-.square {
-    border: 1px solid black;
-    height: 25px;
-    width: 25px;
-  }
-  
-  .container>div:nth-child(16n + 1) {
-    width: 100%;
-    border: 0;
-    height: 0;
-  }
-
-.container{
-    display: flex;
-    flex-wrap: wrap;
-   
-}
 
